--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -8,13 +8,12 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#!/">Brand</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li ng-repeat="item in data" ng-class="{'active':activeNav(item.link)}"><a href="{{item.link}}">{{item.title}}</a></li>
       </ul>
     </div>
   </div>
