--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -13,7 +13,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in data" ng-class="{'active':activeNav(item.link)}"><a href="{{item.link}}">{{item.title}}</a></li>
+        <li ng-repeat="item in data" ng-class="{'active':activeNav(item.link)}">
+          <a href="{{item.link}}">{{item.title}}</a>
+        </li>
       </ul>
     </div>
   </div>
