--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#!/" ng-if="showTitle()">{{navbarTitle}}</a>
+      <a class="navbar-brand" href="/" ng-if="showTitle()">{{navbarTitle}}</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
