--- a/app/styles/grid.css
+++ b/app/styles/grid.css
@@ -1,26 +1,36 @@
 .grid-container {
+  border: solid 1px #e7e7e7;
+  border-bottom-width: 0;
+  border-right-width: 0;
   padding-left: 15px;
   padding-right: 15px;
 }
 
 .grid-container .grid-header .row div {
-  background: sandybrown;
-  border: solid 1px #e7e7e7;
+  background: #f8f8f8;
+  border-bottom: solid 1px #e7e7e7;
+  border-right: solid 1px #e7e7e7;
+  font-weight: bold;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
 .grid-container .grid-filter-row .row div {
    background: #ffffff;
-   border: solid 1px #e7e7e7;
+   border-bottom: solid 1px #e7e7e7;
+   border-right: solid 1px #e7e7e7;
    padding-top: 10px;
    padding-bottom: 10px;
  }
 
 .grid-container .grid-body .row div {
-  border: solid 1px #e7e7e7;
+  border-bottom: solid 1px #e7e7e7;
+  border-right: solid 1px #e7e7e7;
   padding-top: 10px;
   padding-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .grid-container .grid-body .row:nth-child(odd) {
