--- a/app/views/grid.html
+++ b/app/views/grid.html
@@ -1,28 +1,19 @@
 <div class="grid-container">
   <div class="grid-header">
     <div class="row">
-      <div class="col-md-3">col 1</div>
-      <div class="col-md-3">col 2</div>
-      <div class="col-md-3">col 3</div>
-      <div class="col-md-3">col 4</div>
+      <div class="col-sm-3" ng-repeat="i in createColumns() track by $index" ng-style="setWidth()">col</div>
     </div>
   </div>
 
   <div class="grid-filter-row">
     <div class="row">
-      <div class="col-md-3"> <input type="text" class="form-control"> </div>
-      <div class="col-md-3"> <input type="text" class="form-control"> </div>
-      <div class="col-md-3"> <input type="text" class="form-control"> </div>
-      <div class="col-md-3"> <input type="text" class="form-control"> </div>
+      <div class="col-sm-3" ng-repeat="i in createColumns() track by $index" ng-style="setWidth()"> <input type="text" class="form-control"> </div>
     </div>
   </div>
 
   <div class="grid-body">
-    <div class="row">
-      <div class="col-md-3">.col-md-3</div>
-      <div class="col-md-3">.col-md-3</div>
-      <div class="col-md-3">.col-md-3</div>
-      <div class="col-md-3">.col-md-3</div>
+    <div class="row" ng-repeat="item in data">
+      <div class="col-sm-3" ng-repeat="attr in item" ng-style="setWidth()">{{attr}}</div>
     </div>
   </div>
 
