remove filter for fixing

--- a/app/views/grid.html
+++ b/app/views/grid.html
@@ -5,13 +5,13 @@
     </div>
   </div>
 
-  <div class="grid-filter-row">
-    <div class="row">
-      <div class="col-sm-3" ng-repeat="column in gridModel" ng-style="setWidth()">
-        <input type="text" class="form-control">
-      </div>
-    </div>
-  </div>
+  <!--<div class="grid-filter-row">-->
+    <!--<div class="row">-->
+      <!--<div class="col-sm-3" ng-repeat="column in gridModel" ng-style="setWidth()">-->
+        <!--<input type="text" class="form-control">-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <div class="grid-body">
     <div class="row" ng-repeat="item in finalData">
